<resources>
    <string name="app_name">Minebank</string>
    <string name="cpf">CPF</string>
    <string name="senha">SENHA</string>
    <string name="email">EMAIL</string>
    <string name="nome">NOME</string>
    <string name="rg">RG</string>
    <string name="nascimento">DATA DE NASCIMENTO</string>
    <string name="emailconfirm">CONFIRME SEU EMAIL</string>
    <string name="bemvindo">Bem Vindo!\n Faça login com seus dados</string>
    <string name="minebank_logo">MineBank Logo</string>
    <string name="loginbg">LoginBg</string>
    <string name="entrarbutton">ENTRAR</string>
    <string name="cadastrarbutton">Cadastrar-se</string>
    <string name="cadastrartext">Insira seus dados para se cadastrar:</string>
    <string name="continuarbutton">Continuar</string>
    <string name="voltarbutton">Voltar</string>
    <string name="minebanklogo">MinebankLogo</string>
    <string name="saldo">Saldo</string>
    <string name="moeda">R$</string>
    <string name="extratobutton">Extrato</string>
    <string name="gastosbutton">Acompanhar Gastos</string>
    <string name="cartoesbutton">Cartoes</string>
    <string name="transferenciabutton">Transferencia</string>
    <string name="pagamentosbutton">Pagamentos</string>
    <string name="poupancabutton">Poupanca</string>
    <string name="bvusuario">Bem Vindo, </string>
    <string name="codusuario">Usuario</string>
    <string name="agencia">Agencia:</string>
    <string name="codagencia">1234-5</string>
    <string name="conta">Conta:</string>
    <string name="codconta">123456-7</string>
    <string name="estado">UF</string>
    <string name="cidade">CIDADE</string>
    <string name="numeroendereco">NUMERO</string>
    <string name="endereco">ENDEREÇO</string>
    <string name="senhaconfirm">CONFIRMAR SENHA</string>
    <string name="apenasnum">(6 DIGITOS, APENAS NUMEROS)</string>
    <string name="cadastroconcluido">CADASTRO CONCLUIDO COM SUCESSO, RETORNE PARA A TELA INICIAL E FAÇA LOGIN COM SEUS DADOS.</string>
    <string name="cep">CEP</string>
    <string name="depositobutton">DEPOSITO</string>
    <string name="saquebutton">SAQUE</string>
    <string name="transferenciacontasbutton">TRANSFERENCIA ENTRE CONTAS</string>
    <string name="transferenciapoupancabutton">TRANSFERENCIA PARA POUPANÇA</string>
    <string name="CPFinvalido">CPF INVALIDO!</string>
    <string name="preenchercampos">PREENCHA TODOS OS CAMPOS CORRETAMENTE PARA PROSSEGUIR!</string>
    <string name="emailinvalido">EMAIL INVALIDO.\n INSIRA UM EMAIL VALIDO!</string>
    <string name="emailsdiferentes">ERRO NA HORA DE CONFIRMAR!\nEMAILS DIFERENTES!</string>
    <string name="sobrenome">SOBRENOME</string>
    <string name="DATAinvalida">DATA INVALIDA!</string>
    <string name="senhasdiferentes">ERRO NA HORA DE CONFIRMAR!\nSENHAS DIFERENTES!</string>
    <string name="valor">Valor (R$)</string>
    <string name="descricao">Descrição</string>
    <string name="data">Data</string>
    <string name="depositotext">Deposito</string>
    <string name="saldoatual">Saldo atual:</string>
    <string name="valordepositado">Valor a ser depositado:</string>
    <string name="depositarbutton">DEPOSITAR</string>
    <string name="saquetext">Saque</string>
    <string name="valorsacado">Valor a ser sacado:</string>
    <string name="sacarbutton">SACAR</string>
    <string name="parapoupanca">Poupança</string>
    <string name="transferenciatext">Transferencia</string>
    <string name="paraquemtext">Para quem voce quer transferir?</string>
    <string name="pesquisacpftext">Pesquise pelo CPF:</string>
    <string name="CPFnaoencontrado">CPF nao encontrado\nou invalido!</string>
    <string name="clienteencontradotext">Cliente encontrado:</string>
    <string name="nomedevedortext">Leo</string>
    <string name="contadevedortext">Conta: 765432–1 | Agencia: 5432-1</string>
    <string name="nomecredortext">Kayanzinho</string>
    <string name="contacredortext">Conta: 123456-7 | Agencia: 1234-5</string>
    <string name="transferirparabutton">Transferir para esta conta</string>
    <string name="valortransferidotext">Insira o valor da transferencia:</string>
    <string name="transferindoparatext">Transferindo para:</string>
    <string name="transferirvalorbutton">Finalizar transferencia</string>
    <string name="transferenciaconcluida">Transferencia concluida com sucesso!</string>
    <string name="valorrecebidotext">+ R$ 100,00</string>
    <string name="comprovantewhatsbutton">Enviar comprovante via Whatsapp</string>
    <string name="cepinvalido">CEP INVALIDO!</string>
    <string name="numeroinvalido">O NUMERO PRECISA SER PREENCHIDO!</string>
    <string name="CPFcadastrado">CPF JA CADASTRADO NO SISTEMA!</string>
    <string name="emailcadastrado">EMAIL JA CADASTRADO NO SISTEMA!</string>
    <string name="poupanca">Poupanca</string>
    <string name="pagamentostext">Pagamentos</string>
    <string name="numpagamentotext">Insira o número do pagamento a ser feito:</string>
    <string name="numeronaoencontrado">Numero de pagamento não encontrado!</string>
    <string name="descricaotext">Descricao</string>
    <string name="pagamentoencontradotext">Pagamento encontrado:</string>
    <string name="valorpagamentotext">000</string>
    <string name="pagarbutton">Realizar pagamento</string>
    <string name="boletonaoexiste">Boleto não identificado!</string>
    <string name="senhaHint">Coloque sua senha</string>
    <string name="cpfHint">Coloque seu cpf</string>
    <string name="rgHint">Coloque seu rg</string>
    <string name="dtNascimentoHint">Coloque sua data de nascimento</string>
    <string name="nomeHint">Coloque seu nome</string>
    <string name="sobrenomeHint">Coloque seu sobrenome</string>
    <string name="logoDescricao">Logo do MineBank</string>
    <string name="bgLoginDescricao">Background da Tela de Login</string>
    <string name="bgTelasDescricao">Background usado nas telas padrões</string>
    <string name="checkDescricao">Simbolo de input valido</string>
    <string name="wrongDescricao">Simbolo de input invalido</string>
    <string name="emailHint">Coloque seu email</string>
    <string name="bgCadastroDescricao">Background das telas de cadastro</string>
    <string name="logininvalido">Login ou senha invalidos!</string>
    <string name="hintVazio"> </string>
    <string name="simbolotransacao">Simbolo de transação</string>
    <string name="esmeraldadescricao">Esmeralda</string>
    <string name="placa">Placa com informações da usuário.</string>
    <string name="baudescricao">Imagem de um baú aberto</string>
    <string name="stoneDescricao">Imagem de pedra usado ao fundo</string>
</resources>