<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/minebanklogo"
    tools:context=".LoginActivity">



    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/loginbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/bgLoginDescricao" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="500dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.034"
        android:contentDescription="@string/logoDescricao" />


    <TextView
        android:id="@+id/textViewBEMVINDO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/minecraft"
        android:gravity="center"
        android:text="@string/bemvindo"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textCPF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/minecraft"
        android:text="@string/cpf"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/textViewBEMVINDO" />

    <EditText
        android:id="@+id/editTextCPF"
        android:layout_width="247dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#000000"
        android:ems="10"
        android:fontFamily="@font/minecraft"
        android:inputType="number"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/cpfHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCPF" />

    <TextView
        android:id="@+id/textSENHA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/minecraft"
        android:text="@string/senha"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCPF" />

    <EditText
        android:id="@+id/editTextSENHA"
        android:layout_width="247dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#000000"
        android:ems="10"
        android:fontFamily="@font/minecraft"
        android:inputType="numberPassword"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:maxLength="6"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/senhaHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSENHA" />

    <Button
        android:id="@+id/entrarButton"
        android:layout_width="235dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/minecraft"
        android:text="@string/entrarbutton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:onClick="openMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSENHA" />

    <Button
        android:id="@+id/cadastrarButton"
        android:layout_width="142dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:fontFamily="@font/minecraft"
        android:text="@string/cadastrarbutton"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:onClick="openCadastroEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrarButton" />

</androidx.constraintlayout.widget.ConstraintLayout>