<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PoupancaActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/dirtbg"
        android:contentDescription="@string/bgCadastroDescricao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="55dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/minibutton"
        android:fontFamily="@font/minecraft"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="openMenuActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPoupanca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/minecraft"
        android:text="@string/poupanca"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <ImageView
        android:id="@+id/emerald"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:src="@drawable/emerald"
        android:contentDescription="@string/esmeraldadescricao"
        app:layout_constraintBottom_toBottomOf="@+id/saldo"
        app:layout_constraintEnd_toStartOf="@+id/saldo"
        app:layout_constraintTop_toTopOf="@+id/saldo" />

    <TextView
        android:id="@+id/saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/minecraft"
        android:text="@string/saldo"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/textPoupanca"
        app:layout_constraintStart_toStartOf="@+id/textPoupanca"
        app:layout_constraintTop_toBottomOf="@+id/textPoupanca" />

    <ImageView
        android:id="@+id/emerald2"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:src="@drawable/emerald"
        android:contentDescription="@string/esmeraldadescricao"
        app:layout_constraintBottom_toBottomOf="@+id/saldo"
        app:layout_constraintStart_toEndOf="@+id/saldo"
        app:layout_constraintTop_toTopOf="@+id/saldo" />


    <Button
        android:id="@+id/saqueButton"
        android:layout_width="235dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/minecraft"
        android:text="@string/saquebutton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:onClick="openSaque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depositoButton" />

    <Button
        android:id="@+id/depositoButton"
        android:layout_width="235dp"
        android:layout_height="75dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/button"
        android:fontFamily="@font/minecraft"
        android:text="@string/depositobutton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:onClick="openDeposito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saldo" />

    <ImageView
        android:id="@+id/chest"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/chest"
        android:contentDescription="@string/baudescricao"
        app:layout_constraintBottom_toTopOf="@+id/depositoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saldo" />

</androidx.constraintlayout.widget.ConstraintLayout>