<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComprovanteTransferenciaActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dirtbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="500dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textViewTRANSFERENCIACONCLUIDA"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/minecraft"
        android:gravity="center"
        android:text="@string/transferenciaconcluida"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/stonepanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/stonebg"
        app:layout_constraintBottom_toTopOf="@+id/comprovanteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTRANSFERENCIACONCLUIDA" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/stonepanel"
        app:layout_constraintEnd_toEndOf="@+id/stonepanel"
        app:layout_constraintStart_toStartOf="@+id/stonepanel"
        app:layout_constraintTop_toTopOf="@+id/stonepanel">

        <LinearLayout
            android:id="@+id/devedorInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/nomeDevedorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/minecraft"
                android:gravity="center"
                android:text="@string/nomedevedortext"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/contaDevedorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/minecraft"
                android:gravity="center"
                android:text="@string/contadevedortext"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="visible" />

        </LinearLayout>

        <ImageView
            android:id="@+id/transacao"
            android:layout_width="98dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/transacao"
            android:contentDescription="@string/simbolotransacao"/>

        <LinearLayout
            android:id="@+id/credorInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/nomeCredorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/minecraft"
                android:gravity="center"
                android:text="@string/nomecredortext"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/contaCredorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/minecraft"
                android:gravity="center"
                android:text="@string/contacredortext"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/valorRecebidoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/minecraft"
                android:gravity="center"
                android:text="@string/valorrecebidotext"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/comprovanteButton"
        android:layout_width="328dp"
        android:layout_height="63dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button"
        android:fontFamily="@font/minecraft"
        android:text="@string/comprovantewhatsbutton"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:onClick="enviarComprovante"
        app:layout_constraintBottom_toTopOf="@+id/voltarButton"
        app:layout_constraintEnd_toEndOf="@+id/voltarButton"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/voltarButton" />

    <Button
        android:id="@+id/voltarButton"
        android:layout_width="146dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/minecraft"
        android:text="@string/voltarbutton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>